--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
         >
         <a
           class="py-2 d-none d-md-inline-block"
-          href="/"
+          href="https://workout-planner-200.herokuapp.com/"
           >Workout logs</a
         >
         <a class="py-2 d-none d-md-inline-block" href="#">Sign In</a>
       </div>
     </nav>
+
 
     <div
       class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"
